# pico-slang

./: CMakeLists.txt  LICENSE  README.md  common.slang  export_inline_functions.c  hello_world.slang  pico.slang  picotoy.slang  runner.slang  st7789.slang
cmake/: CMakeSlangInformation.cmake
shaders/: a_dead_planet_of_silicon_dreams.glsl  auroras_by_nimitz.glsl  cable_nest_by_mrange.glsl  lets_self_reflect_by_mrange.glsl  protean_clouds_by_nimitz.glsl  starry_planes_by_mrange.glsl
